Controller Advice is done, now Swag-endpoint and fix log